crates/sid-widgets/tests/snapshots/network_widget_kill__network_modal_awaiting_term.snap
---
source: crates/sid-widgets/tests/network_widget_kill.rs
expression: "render_to_string(&w, 80, 24)"
---
┌   Interfaces ──────┐┌ * Listening ports ─────────────────────────────────────┐
│  * lo              ││PORT    PID     PROTO  COMMAND        ADDR              │
│                    ││22      1234    tcp    sshd           0.0.0.0           │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│         ┌ kill ────────────────────────────────────────────────────┐─────────┘
│         │SIGTERM sent to PID 1234; waiting for exit...─────────────│─────────┐
│         └──────────────────────────────────────────────────────────┘ USER    │
│                    ││1234    sshd                    0.0    0B       0       │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
