crates/sid-widgets/tests/snapshots/network_widget_kill__network_modal_confirm_sigterm.snap
---
source: crates/sid-widgets/tests/network_widget_kill.rs
expression: "render_to_string(&w, 80, 24)"
---
┌ Interfaces ────────┐┌ Listening ports ───────────────────────────────────────┐
│   * lo             ││PORT    PID     PROTO  COMMAND        ADDR              │
│                    ││22      1234    tcp    sshd           0.0.0.0           │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│         ┌ kill ────────────────────────────────────────────────────┐─────────┘
│         │Kill PID 1234? Send SIGTERM (y/n)─────────────────────────│─────────┐
│         └──────────────────────────────────────────────────────────┘ USER    │
│                    ││1234    sshd                    0.0    0B       0       │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
